--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
       "transform-object-rest-spread",
       "transform-react-jsx",
       "transform-class-properties",
-      "transform-semantic-ui-react-imports"
+      "transform-semantic-ui-react-imports",
+      ["babel-plugin-styled-components", {
+        "transpileTemplateLiterals": true,
+      }],
     ]
   }
