--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   ],
   "peerDependencies": {
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "styled-components": ">= 4"
   },
   "devDependencies": {
+    "styled-components": "^4.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -45,8 +48,7 @@
   "dependencies": {
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.2.0"
+    "semantic-ui-react": "^0.86.0"
   },
   "author": "Mosè Raguzzini",
   "license": "ISC"
