--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
-    "build": "webpack"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "Accordion",
@@ -42,8 +42,10 @@
     "react-styleguidist": "^9.0.6",
     "styled-components": "^4.2.0",
     "svg-url-loader": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.0"
   },
   "dependencies": {
     "react-scripts": "1.1.4",
