--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-semantic-ui-accordion-menu",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A multilevel accordion menu, buil on top of react-semantic-ui",
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -46,7 +46,7 @@
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.0"
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "react-scripts": "1.1.4",
