--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bionicvapourboy/react-semantic-ui-accordion-menu.git",
+    "url": "https://github.com/bionicvapourboy/react-semantic-ui-accordion-menu.git"
   },
   "keywords": [
     "Accordion",
@@ -59,5 +59,5 @@
   },
   "author": "Mosè Raguzzini",
   "license": "ISC",
-  "homepage": "https://github.com/bionicvapourboy/react-semantic-ui-accordion-menu",
+  "homepage": "https://github.com/bionicvapourboy/react-semantic-ui-accordion-menu"
 }
