--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
+    "develop": "webpack-dev-server --mode production", 
     "build": "webpack --mode production"
   },
   "repository": {
